--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -9,6 +9,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2204.07531}, 
+      arxiv={2204.07531},
       preview={understanding-game-playing.png},
       note={ACL 2022}
 }
@@ -20,7 +21,8 @@
       eprint={2308.12952},
       archivePrefix={arXiv},
       primaryClass={cs.RO},
-      url={https://arxiv.org/abs/2308.12952}, 
+      url={https://arxiv.org/abs/2308.12952},   
+      arxiv={2308.12952},
       preview={bridgedatav2.png},
       note={CoRL 2023}
 }
@@ -33,6 +35,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.RO},
       url={https://arxiv.org/abs/2307.00117}, 
+      arxiv={2307.00117},
       preview={grif.png},
       note={CoRL 2023},
 }
@@ -45,6 +48,7 @@
       archivePrefix={arXiv},
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2211.08684}, 
+      arxiv={2211.08684},
       preview={neural-proto.png},
       note={ACL 2023}
 }
@@ -57,8 +61,8 @@
       archivePrefix={arXiv},
       primaryClass={cs.LG},
       url={https://arxiv.org/abs/2506.02355}, 
+      arxiv={2506.02355},
       selected={true},
-      pdf={assets/pdf/2506.02355v2.pdf},
       preview={rewarding-unlikely.png},
       note={EMNLP 2025 (Oral)}
 }
